--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="fr">
-<head>
+<head><base href="./*">
   <meta charset="utf-8">
   <title>DoxfyZ Studio</title>
-  <base href="https://Desmondmies.github.io/DoxfyZ-Studio-Website-Prod/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.2f24ed20def8231ac1ff.css"></head>
