--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="fr">
-<head><base href="./*">
+<head>
+  <base href="./*">
   <meta charset="utf-8">
   <title>DoxfyZ Studio</title>
 
