--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="styles.09c821525a6275f595bf.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.bda95d5896422d031328.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.cf105c9ebe0dbad8ce9d.js"></script></body>
+<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.d5e41319ac4c4f307356.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.50eb0acad79dc176d5da.js" type="module"></script><script src="main-es5.50eb0acad79dc176d5da.js" nomodule defer></script></body>
 </html>
